 * prevent bypassing email address policy via user preferences
 * add modular user ID change support for Trac core as well as for some other
   Trac plugins, currently:
  * AnnouncerPlugin > 0.12.1
  * ScreenshotsPlugin (all versions)
  * TracFormsPlugin > v0.2
  * VotePlugin (all versions)

 new features
 * #843: Make admin approval required for account registration
 * #7426: Dynamicity of Trac (Show number of registered users)
 * #8930: Setup wizard for AcctMgr
 * #8595: Ability to ban accounts
 * #10680: Provide confirmation when password is changed
 * #10684: Provide feedback when performing actions on the Users page
 * #10739: Move 'Back to Accounts' button to the contextual navigation
 * #10741: Provide email verification status indicator on user admin panel
 * #10742: Rename "Update" button to "Refresh" on Review Account Details page
 * #10745: Add 'Select all' checkbox to header of list in user admin panel
 * #11214: Rename db_cleanup to admin_db_cleanup
 * #11215: Set focus when admin Users page loads
 * #11894: Make (clear that) username policy (is) configurable
 * #12054: add QuestionRegisterPlugin-like functionality
 * #12097: Provide confirmation when deleting accounts
 * add unit tests for db access functions
 * add account guard configuration to config admin panel
 * filter account list in user admin panel by account status
 * remake account editor following Trac admin panel style i.e. for enums


acct_mgr-0.4.4 (03-Apr-2014) - branch 0.11
 resolved issues
 * escape email for notification message against reported xss vulnerability


acct_mgr-0.4.3 (13-Feb-2013) - branch 0.11
 resolved issues
 * #8927: LoginModule with .htpasswd & passwd reset => not working
 * #10681: User with empty password can't reset their password
 * #10765: AttributeError: 'NoneType' object has no attribute 'strip'
 * #10871: AccountGuard destroys trac.ini
 * prevent two ways for a user to bypass a forced password change