@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 #
-# Copyright (c) 2013, Steffen Hoffmann
+# Copyright (c) 2013-2015 Steffen Hoffmann
 # 
 # This software is licensed as described in the file COPYING, which
 # you should have received as part of this distribution.
@@ -8,15 +8,47 @@
 
 import unittest
 
-from acct_mgr.opt.tests import announcer, tracforms, tracscreenshots, tracvote
-
 
 def suite():
+    msg_fail = 'Issue with %s (%s): skipping acct_mgr.opt.tests.%s'
+
     suite = unittest.TestSuite()
-    suite.addTest(announcer.suite())
-    suite.addTest(tracforms.suite())
-    suite.addTest(tracscreenshots.suite())
-    suite.addTest(tracvote.suite())
+
+    try:
+        import acct_mgr.opt.tests.announcer
+    except ImportError, e:
+        print(msg_fail % ('UID changer for TracAnnouncer', e, 'announcer'))
+    else:
+        suite.addTest(acct_mgr.opt.tests.announcer.suite())
+
+    try:
+        import acct_mgr.opt.tests.tracforms
+    except ImportError, e:
+        print(msg_fail % ('UID changer for TracForms', e, 'tracforms'))
+    else:
+        suite.addTest(acct_mgr.opt.tests.tracforms.suite())
+
+    try:
+        import acct_mgr.opt.tests.tracscreenshots
+    except ImportError, e:
+        print(msg_fail % ('UID changer for TracScreenshots', e,
+                          'tracscreenshots'))
+    else:
+        suite.addTest(acct_mgr.opt.tests.tracscreenshots.suite())
+
+    try:
+        import acct_mgr.opt.tests.tracvote
+    except ImportError, e:
+        print(msg_fail % ('UID changer for TracVote', e, 'tracvote'))
+    else:
+        suite.addTest(acct_mgr.opt.tests.tracvote.suite())
+
+    try:
+        import acct_mgr.opt.tests.radius
+    except ImportError, e:
+        print(msg_fail % ('RADIUS auth', e, 'radius'))
+    else:
+        suite.addTest(acct_mgr.opt.tests.radius.suite())
     return suite
 
 
