@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # Copyright (C) 2005 Matthew Good <trac@matt-good.net>
+# Copyright (C) 2015 Steffen Hoffmann <hoff.st@web.de>
 # All rights reserved.
 #
 # This software is licensed as described in the file COPYING, which
@@ -19,6 +20,8 @@ except ImportError:
 def suite():
     from acct_mgr.tests import admin, api, db, guard, htfile, model, register
     from acct_mgr.tests import util
+    from acct_mgr.opt.tests import suite as opt_test_suite
+
     suite = unittest.TestSuite()
     suite.addTest(admin.suite())
     suite.addTest(api.suite())
@@ -28,6 +31,8 @@ def suite():
     suite.addTest(model.suite())
     suite.addTest(register.suite())
     suite.addTest(util.suite())
+    suite.addTest(opt_test_suite())
+
     if INCLUDE_FUNCTIONAL_TESTS:
         from acct_mgr.tests.functional import suite as functional_suite
         suite.addTest(functional_suite())
