@@ -35,6 +35,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
 
  new features
  * #843: Make admin approval required for account registration
+ * #6788: Add a RadiusAuthStore to AccountManagerPlugin
  * #7426: Dynamicity of Trac (Show number of registered users)
  * #8930: Setup wizard for AcctMgr
  * #8595: Ability to ban accounts
